--- a/app/views/pharmacies/show.html.erb
+++ b/app/views/pharmacies/show.html.erb
@@ -8,63 +8,115 @@
   </div>
 
   <div class="text-center mb-4">
-    <%= link_to "Write a Review", new_pharmacy_review_path(@pharmacy), class: "btn btn-outline-primary" %>
-  </div>
 
-  <h2 class="text-center text-primary mb-4">Available Products</h2>
+      <button type="button" class="btn btn-outline-primary" data-bs-toggle="modal" data-bs-target="#exampleModal" data-bs-whatever="@getbootstrap">Write a review</button>
 
-  <% if @products.any? %>
-    <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
-      <% @products.each do |product| %>
-        <div class="col d-flex">
-          <div class="card shadow-sm w-100 d-flex flex-column">
-            <div class="card-image">
-              <% if product.images.any? %>
-                <%= cl_image_tag product.images.first.key, height: 300, width: 400, crop: :fill, class: "card-img-top" %>
-              <% else %>
-                <img src="https://via.placeholder.com/400x300?text=No+Image" alt="No Image" class="card-img-top">
-              <% end %>
+      <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h5 class="modal-title" id="exampleModalLabel">Leave a review</h5>
+              <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
+            <div class="modal-body">
 
-            <div class="card-body text-center flex-grow-1 d-flex flex-column">
-              <h5 class="card-title text-primary"><%= product.name %></h5>
 
-              <% # Find price from pharmacy_products for this pharmacy and product %>
-              <% pharmacy_product = PharmacyProduct.find_by(pharmacy_id: @pharmacy.id, product_id: product.id) %>
-              <% if pharmacy_product.present? %>
-                <p class="card-text text-muted">Price: £<%= number_with_precision(pharmacy_product.price, precision: 2) %></p>
-              <% else %>
-                <p class="card-text text-muted">Price: Not available</p>
-              <% end %>
+            <%= simple_form_for [@pharmacy, @pharmacy.reviews.new], html: { class: 'review-form js-review-form', data: { pharmacy_id: @pharmacy.id }, id: "review-form-#{@pharmacy.id}" } do |f| %>
+                <div class="star-rating">
+                  <% 5.times do |i| %>
+                    <%= radio_button_tag :rating, i + 1, false, id: "star#{@pharmacy.id}-#{i + 1}", name: "review[rating]" %>
+                    <%= label_tag "star#{@pharmacy.id}-#{i + 1}", "★", class: "star" %>
+                  <% end %>
+                </div>
+                <%= f.input :description, label_html: { class: "col-form-label" }, placeholder: "Write your review..." %><br>
 
-              <p class="card-text"><%= product.description %></p>
 
-              <!-- Quantity and Add to Basket -->
-              <div class="mt-auto d-flex justify-content-center align-items-center gap-2">
-                <input type="number" min="1" value="1"
-                       class="form-control form-control-sm quantity-input"
-                       style="width: 70px;"
-                       id="quantity_<%= product.id %>">
-
-                <button type="button"
-                        class="btn btn-success btn-sm add-to-basket-btn"
-                        data-product-id="<%= product.id %>"
-                        data-pharmacy-id="<%= @pharmacy.id %>">
-                  Add to Basket
-                </button>
-              </div>
             </div>
+            <div class="modal-footer">
+              <%= f.submit "Submit Review", class: "btn btn-primary"%>
+            </div>
+            <% end %>
           </div>
         </div>
+      </div>
+
+
+  </div>
+  <nav>
+    <div class="nav nav-tabs" id="nav-tab" role="tablist">
+      <button class="nav-link active" id="nav-products-tab" data-bs-toggle="tab" data-bs-target="#nav-products" type="button" role="tab" aria-controls="nav-products" aria-selected="true">Products</button>
+      <button class="nav-link" id="nav-reviews-tab" data-bs-toggle="tab" data-bs-target="#nav-reviews" type="button" role="tab" aria-controls="nav-reviews" aria-selected="false">Reviews
+      </button>
+    </div>
+  </nav>
+  <div class="tab-content" id="nav-tabContent">
+    <div class="tab-pane fade show active" id="nav-products" role="tabpanel" aria-labelledby="nav-products-tab">
+       <% if @products.any? %>
+        <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
+          <% @products.each do |product| %>
+            <div class="col d-flex">
+              <div class="card shadow-sm w-100 d-flex flex-column">
+                <div class="card-image">
+                  <% if product.images.any? %>
+                    <%= cl_image_tag product.images.first.key, height: 300, width: 400, crop: :fill, class: "card-img-top" %>
+                  <% else %>
+                    <img src="https://via.placeholder.com/400x300?text=No+Image" alt="No Image" class="card-img-top">
+                  <% end %>
+                </div>
+
+                <div class="card-body text-center flex-grow-1 d-flex flex-column">
+                  <h5 class="card-title text-primary"><%= product.name %></h5>
+
+                  <% # Find price from pharmacy_products for this pharmacy and product %>
+                  <% pharmacy_product = PharmacyProduct.find_by(pharmacy_id: @pharmacy.id, product_id: product.id) %>
+                  <% if pharmacy_product.present? %>
+                    <p class="card-text text-muted">Price: £<%= number_with_precision(pharmacy_product.price, precision: 2) %></p>
+                  <% else %>
+                    <p class="card-text text-muted">Price: Not available</p>
+                  <% end %>
+
+                  <p class="card-text"><%= product.description %></p>
+
+                  <!-- Quantity and Add to Basket -->
+                  <div class="mt-auto d-flex justify-content-center align-items-center gap-2">
+                    <input type="number" min="1" value="1"
+                          class="form-control form-control-sm quantity-input"
+                          style="width: 70px;"
+                          id="quantity_<%= product.id %>">
+
+                    <button type="button"
+                            class="btn btn-success btn-sm add-to-basket-btn"
+                            data-product-id="<%= product.id %>"
+                            data-pharmacy-id="<%= @pharmacy.id %>">
+                      Add to Basket
+                    </button>
+                  </div>
+                </div>
+              </div>
+            </div>
+          <% end %>
+        </div>
+      <% else %>
+        <div class="alert alert-info text-center mt-4">
+          No products available for this pharmacy.
+        </div>
+      <% end %>
+      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script> end %>
+    </div>
+    <div class="tab-pane fade" id="nav-reviews" role="tabpanel" aria-labelledby="nav-reviews-tab">
+        <% if @pharmacy.reviews.empty? %>
+          <div class="alert alert-info text-center mt-4">
+            No reviews yet. Be the first to leave a review!
+          </div>
+        <% else %>
+      <%  @pharmacy.reviews.each do |review| %>
+           <p> <%= review.rating %> stars</p>
+           <p><%= review.description %></p>
+        <% end %>
       <% end %>
     </div>
-  <% else %>
-    <div class="alert alert-info text-center mt-4">
-      No products available for this pharmacy.
-    </div>
-  <% end %>
+  </div>
 
-</div>
 
 <!-- Sticky Basket: Always render, start hidden -->
 <div id="sticky-basket-summary"
@@ -133,6 +185,8 @@
       });
     });
   });
+
+
 </script>
 
 <!-- CSS -->
